--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "moment": "^2.13.0"
   }
 }
